--- a/appveyor.yml
+++ b/appveyor.yml
@@ -60,7 +60,7 @@ test_script:
   - python continuous-integration\move-conda-package.py conda-recipe
   - conda create -n my_tests --yes python=%PYTHON_VERSION% setuptools cython numpy=%NUMPY_VERSION% nose
   - activate my_tests
-  - conda install pyappveyordemo
+  - conda install --use-local pyappveyordemo
   - nosetests --exe pyappveyordemo
   #- python setup.py test
 
