--- a/appveyor.yml
+++ b/appveyor.yml
@@ -60,7 +60,8 @@ test_script:
   - python continuous-integration\move-conda-package.py conda-recipe
   - conda create -n my_tests --yes python=%PYTHON_VERSION% setuptools cython numpy=%NUMPY_VERSION% nose
   - activate my_tests
-  - conda install --use-local --yes pyappveyordemo
+  - python setup.py install
+  #- conda install --use-local --yes pyappveyordemo
   - nosetests --exe pyappveyordemo
   #- python setup.py test
 
