--- a/.travis.yml
+++ b/.travis.yml
@@ -14,7 +14,9 @@ install:
   - source continuous-integration/travis/install.sh
 
 script:
-  - conda build conda-recipe --quiet
+  - conda install setuptools numpy cython
+  - python setup.py bdist_conda
+  #- conda build conda-recipe --quiet
 
 after_success:
   - python continuous-integration/move-conda-package.py conda-recipe
